# RoboticArm

./: README.md  Robotic+Arm+with+Servo+&+Arduino.3mf
urdf_description/config/: controllers.yaml  display.rviz
urdf_description/launch/: display.launch.py  gazebo.launch.py
urdf_description/meshes/: base_link.stl  fifth_link_1.stl  fourth_link_1.stl  second_link_1.stl  third_link_1.stl
urdf_description/urdf/: urdf.gazebo  urdf.trans  urdf.xacro
urdf_moveit_config/: CMakeLists.txt  package.xml
urdf_moveit_config/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  urdf.srdf
urdf_moveit_config/launch/: moveit.launch.py
